# serenity

AK/: Format.cpp  Platform.h
Base/etc/: WindowServer.ini
Base/res/apps/: Devices.af
Base/res/themes/: Basic.ini
Ladybird/: CMakeLists.txt  Info.plist.in  Utilities.cpp
Ladybird/Android/: build.gradle.kts
Ladybird/ImageDecoder/: CMakeLists.txt
Ladybird/cmake/: InstallRules.cmake  ResourceFiles.cmake
Ladybird/iOS/: Build.sh
Ladybird/iOS/src/: main.mm
Meta/CMake/: utils.cmake
Meta/Lagom/: CMakeLists.txt  TestGUI.cpp
Userland/: CMakeLists.txt
Userland/Applications/: CMakeLists.txt
Userland/Applications/Devices/: CMakeLists.txt  HardwareModel.cpp  HardwareModel.h  HardwareWidget.cpp  HardwareWidget.gml  HardwareWidget.h  main.cpp
Userland/Applications/DisplaySettings/: MonitorSettings.gml  MonitorSettingsWidget.cpp  MonitorSettingsWidget.h  MonitorWidget.h  ThemesSettingsWidget.cpp
Userland/Applications/FileManager/: PropertiesWindow.cpp  PropertiesWindow.h
Userland/Applications/Magnifier/: MagnifierWidget.cpp
Userland/Applications/MouseSettings/: HighlightPreviewWidget.cpp  HighlightWidget.cpp  MouseWidget.cpp  ThemeWidget.cpp
Userland/Applications/Run/: main.cpp
Userland/Applications/SpaceAnalyzer/: TreeMapWidget.cpp
Userland/Demos/WidgetGallery/: GalleryModels.h
Userland/Libraries/LibCore/: CMakeLists.txt  System.cpp  System.h
Userland/Libraries/LibGUI/: Application.cpp  BoxLayout.h  CMakeLists.txt  Clipboard.h  (+15 more)
Userland/Services/: CMakeLists.txt
Userland/StylePainters/: CMakeLists.txt
Userland/Utilities/: chres.cpp  shot.cpp
(+74 files in other folders)
